# handlers/delete.go
@@ -13,7 +13,7 @@ import (
 // responses:
 //  201: noContentResponse
 //  404: errorResponse
-//  501:errorResponse
+//  501: errorResponse
 
 // Delete handles DELETE requests and removes items from the database
 func (p *Products) Delete(c *gin.Context) {
