# swagger.yaml
@@ -1,4 +1,15 @@
+basePath: /
+consumes:
+    - application/json
 definitions:
+    GenericError:
+        description: GenericError is a generic error message returned by a server
+        properties:
+            message:
+                type: string
+                x-go-name: Message
+        type: object
+        x-go-package: github.com/microservices_grpc/handlers
     Product:
         description: Product defines the structure for an API product
         properties:
@@ -35,12 +46,28 @@ definitions:
             - sku
         type: object
         x-go-package: github.com/microservices_grpc/data
+    ValidationError:
+        description: ValidationError is a collection of validation error messages
+        properties:
+            messages:
+                items:
+                    type: string
+                type: array
+                x-go-name: Messages
+        type: object
+        x-go-package: github.com/microservices_grpc/handlers
+info:
+    description: '# Documentation for Product API'
+    title: of Product API
+    version: 1.0.0
 paths:
     /products:
         get:
             description: Return a list of products from the database
             operationId: listProducts
-            responses: {}
+            responses:
+                "200":
+                    $ref: '#/responses/productsResponse'
             tags:
                 - products
         post:
@@ -50,20 +77,73 @@ paths:
                 422: errorValidation
                 501: errorResponse
             operationId: createProduct
+            parameters:
+                - description: |-
+                    Product data structure to Update or Create.
+                    Note: the id field is ignored by update and create operations
+                  in: body
+                  name: Body
+                  required: true
+                  schema:
+                    $ref: '#/definitions/Product'
             summary: Create a new product
             tags:
                 - products
         put:
             description: Update a products details
             operationId: updateProduct
-            responses: {}
+            parameters:
+                - description: |-
+                    Product data structure to Update or Create.
+                    Note: the id field is ignored by update and create operations
+                  in: body
+                  name: Body
+                  required: true
+                  schema:
+                    $ref: '#/definitions/Product'
+            responses:
+                "201":
+                    $ref: '#/responses/noContentResponse'
+                "404":
+                    $ref: '#/responses/errorResponse'
+                "422":
+                    $ref: '#/responses/errorValidation'
             tags:
                 - products
     /products/{id}:
         get:
             description: Return a list of products from the databse
             operationId: listSingle
-            responses: {}
+            responses:
+                "200":
+                    $ref: '#/responses/productResponse'
+                "404":
+                    $ref: '#/responses/errorResponse'
             tags:
                 - products
+produces:
+    - application/json
+responses:
+    errorResponse:
+        description: Generic error message returned as a string
+        schema:
+            $ref: '#/definitions/GenericError'
+    errorValidation:
+        description: Validation errors defined as an array of strings
+        schema:
+            $ref: '#/definitions/ValidationError'
+    noContentResponse:
+        description: No content is retured by this API endpoint
+    productResponse:
+        description: Data structure representing a single product
+        schema:
+            $ref: '#/definitions/Product'
+    productsResponse:
+        description: A list of products
+        schema:
+            items:
+                $ref: '#/definitions/Product'
+            type: array
+schemes:
+    - http
 swagger: "2.0"
